--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,6 +104,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:background="#9cffffff"
+            android:layout_marginBottom="10px"
             android:text="@string/L_login" />
 
 
@@ -113,6 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:background="#9cffffff"
             android:text="Sign Up" />
 
 
