--- a/app/src/main/res/layout/restaurantlistactivity.xml
+++ b/app/src/main/res/layout/restaurantlistactivity.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgpurple"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/bgpurple">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,17 +14,25 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/logo"
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="103dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
+            android:layout_height="100dp"
+            android:contentDescription="Company Logo"
             app:srcCompat="@drawable/logo" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
+            android:text="Restaurants List"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv"
@@ -35,15 +43,5 @@
 
         </LinearLayout>
     </LinearLayout>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
 
 </android.support.constraint.ConstraintLayout>
